	- Base the Immelmann turn pitch direction on the local pitch angular velocity (i.e., pitch down if already rotating that way — fixes the pitch oscillation behaviour when targeting an opponent behind the craft while inverted near terrain).
	- Don't summon the NaN-Kraken when the post-terrain avoidance cool-down is 0.
- Detectors:
	-Can now set targeting camera slew rate using "traverseRate" field in ModuleTargetingCamera.
- Weapons:
	- Fixes for initial bullet placement and simulated hit position when Krakensbane is not active.
	- Fix lasers using wrong armor thickness value for damage reduction calcs.
  	- Missiles:
		  - Add new Orbital guidance option for Modular Missiles
		    - Missile will attempt to intercept orbital target at the user-set Max Speed value
      		- Fix clustermissiles launching copies of themselves instead of submunitions.
		- Fix clustermissiles not respecting submunition trigger distance.
		- Fix clustermissiles acting like reloadable missiles when not set up for reloading.
		- Fix Guidance Type None missiles not holding course.
		- GPS missiles now require a target cam or radar lock for GPS coords.
		- INS missiles can now use either radar or IRST tracking.
		- INS missiles now have datalink capability for mid-flight target coordinate updates, update rate clamped to Radar/IRST scan speed.
		- Fix error with Inertial guidance target prediction for non-updating missiles.
		- Fix Missiles having 10 armor instead of 2.
- Vessel Mover:
	- Check for outdated loadMeta files when refreshing the craft list in the vessel selection window and update them since KSP doesn't update them when you save your craft!
	- Fix the spawn point selection sometimes not registering.
- ModIntegration:
	- Fixes for inhibiting CameraTools when initial spawning during continuous spawning and disable auto-switching to newly spawned craft joining the competition.

v1.6.8.0
IMPROVEMENTS / FIXES
- General: